--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(html|vue|ts|js|json|cjs)\""
   },
   "dependencies": {
     "sass": "^1.69.7",
@@ -16,6 +17,7 @@
     "@vitejs/plugin-vue": "^4.5.2",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.33",
+    "prettier": "^3.2.3",
     "tailwindcss": "^3.4.1",
     "unplugin-auto-import": "^0.17.3",
     "unplugin-vue-components": "^0.26.0",
